requirements/project/static/css/index.css
:root {
  --main-color: #0f172a;
  --border-color: #e4e7ea;
  --icons-color: #748093;
  --font-heading: "Unbounded", sans-serif;
  --font-body: "Archivo", sans-serif;
}
@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Unbounded:wght@200..900&display=swap");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
a{
    text-decoration: none;
    color: inherit;
}
body {
  font-family: "Inter", sans-serif;
  line-height: 1.5;
  background-color: #f9f9f9;
  width: 100svw;
}
/*Header Section CSS*/
header {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 40px;
  border-radius: 12px;
  background-color: #ffffff;
  border: solid 1px var(--border-color);
  max-width: 80svw;
  margin: auto;
  height: 8svh;
  margin-block: 20px;
}
header .header__logo {
  max-height: 10svh;
  max-width: 10svw;
  width: 50px;
}
.header__filter-select {
  background-color: #ffffff;
  color: var(--main-color);
  border: solid 1px var(--border-color);
  border-radius: 4px;
  padding: 10px 20px;
  cursor: pointer;
}
.header__profile-nav {
  display: flex;
  align-items: center;
  gap: 10px;
}
.header__profile-nav img {
  width: 30px;
  height: 30px;
}
.header__profile-nav a {
  color: white;
  text-decoration: none;
  padding: 10px 20px;
  background-color: var(--main-color);
  border-radius: 5px;
}
/*Hero Section CSS*/
.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 80svw;
  background-color: #ffffff;
  border: solid 1px var(--border-color);
  min-height: 40svh;
  margin: auto;
  gap: 15px;
  border-radius: 12px;
}
.hero__title {
  font-size: 2.5rem;
  max-width: 60%;
  color: var(--main-color);
  text-align: center;
  font-family: var(--font-heading,monospace);
}
.hero__description {
  text-align: center;
  font-size: 1.2rem;
  color: var(--main-color);
}
.hero__cta {
  display: flex;
  flex-direction: row;
  gap: 20px;
}

.btn-secondary#btn1,
#btn2:hover {
  display: block;
  color: white;
  text-decoration: none;
  padding: 10px 20px;
  background-color: var(--main-color);
  border-radius: 5px;
}
.btn-secondary#btn2 {
  display: block;
  text-decoration: none;
  padding: 10px 20px;
  color: var(--main-color);
  border: solid 2px var(--main-color);
  background-color: transparent;
  border-radius: 5px;
  transition: all 0.3s ease-in-out;
}

/*Main Section CSS*/
.main-content{
    max-width: 80svw;
    margin: auto;
}
.main-content__filter-title{
    font-size: 1.5rem;
    margin-block: 20px;
    color: var(--main-color);
    margin-bottom: 20px;
    text-align: center;
    width: 100%;
}
.main-content__posts{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 30px;
    justify-content: space-between;
}
.main-content__posts .container{
    background-color: #ffffff;
    border: solid 1px var(--border-color);
    border-radius: 12px;
    padding: 20px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    width: calc(40svw - 15px);
    display: flex;
}
.container .post{
    display: flex;
    flex-direction: column;
    gap: 10px;
    justify-content: space-between;
}
.post .initial{
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    background-color: #F2F5F9;
    padding: 10px;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    font-family: monospace;
    color: var(--main-color);
    font-size: 1.3rem;
    text-transform: uppercase;
}
.user_container{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}
.likes_dislikes_comment{
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-top: 20px;
    gap: 10px;
}
.likebtn, .dislikebtn{
    background-color: transparent;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0;
    margin: 0;
}
.likebtn:hover, .dislikebtn:hover{
    scale: 1.1;
    transition: all 0.3s ease-in-out;
}
.divider{
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--main-color);
    margin-block: 10px;
    opacity: 0.2;
}
.categories{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    row-gap: 10px;
    column-gap: 10px;
    margin-top: 10px;
}
.category{
    display: inline-block;
    background-color: #F2F5F9;
    padding: 5px 10px;
    margin-top: 6px;
    border-radius: 20px;
    color: var(--main-color);
    font-size: 0.9rem;
}
.clamp {
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

